Fixed some spacing on big and mobile version for the work and contact divs

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,7 @@
 
 #contactText{
     padding-top: 5%;
+    margin-top: -10%;
 }
 
 #aboutMe{
@@ -82,6 +83,15 @@ i{
 .workPics{
     height: 50%;
     width: 50%;
+}
+
+.workDiv{
+    margin-top: 2%;
+    margin-bottom: 8%;
+}
+
+#workIntro{
+    margin-bottom: 5%;
 }
 
 #contactContainer{
